[gd_scene load_steps=7 format=2]

[ext_resource path="res://Other/Gothic negrita.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Other/Gothic.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/TitleScreen/TitleScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0.560784, 0.345098, 0.345098, 1 )
extra_spacing_top = 11
extra_spacing_char = 12
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "GameOver"
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 22
extra_spacing_top = 1
extra_spacing_char = 1
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
pause_mode = 2
margin_right = 320.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -128.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Dodge
the
Push"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Title"]
autoplay = "GameOver"
anims/GameOver = SubResource( 2 )

[node name="StartLabel" type="Label" parent="UI"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -104.0
margin_bottom = -75.0
custom_fonts/font = SubResource( 3 )
text = "Tap to START"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimer" type="Timer" parent="UI"]
wait_time = 0.6

[connection signal="animation_finished" from="UI/Title/AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="timeout" from="UI/StartTimer" to="." method="_on_StartTimer_timeout"]
